# artwork-simula-logo

./: README.md
python-script/: .gitignore
python-scripts/: .gitignore  pytest.ini  requirements.txt  requirements_testing.txt  setup.cfg  tox.ini
python-scripts/examples/: example1.py  example2.py  example3.py  example4.py
python-scripts/src/: btiles.py  generate_simula_logo.py  penrose_p3.py  polygon.py  robinson_triangle.py  triangle.py
python-scripts/src/penrose/: btiles.py  penrose_p3.py  robinson_triangle.py  triangle.py
python-scripts/src/simula_logo_generator/: generate_simula_logo.py
python-scripts/src/simula_logo_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
