[metadata]
name = simula-logo-generator
version = 1.0.0
author = Oussama Jarrousse
author_email = jarrousse@simulalab.org
description = Generates an SVG and a PNG of the Simula Logo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/simulalab/artwork/simula-logo
project_urls =
    Bug Tracker = https://gitlab.com/simulalab/artwork/simula-logo/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    wheel
    cairosvg
    Pillow

zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    generate_simula_logo = simula_logo_generator.generate_simula_logo:main